--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,8 +111,8 @@ jobs:
       - run:
           name: Get clang12
           command: |
-            (sudo yes || true) | sudo /opt/local/bin/port install clang-12
-            sudo /opt/local/bin/port select --set clang mp-clang-12
+            (sudo yes || true) | sudo /opt/local/bin/port install clang-13
+            sudo /opt/local/bin/port select --set clang mp-clang-13
             /opt/local/bin/clang++ -v > clangVersion.txt
           no_output_timeout: 30m
 
@@ -130,7 +130,7 @@ jobs:
             cd build
             git checkout $CIRCLE_BRANCH
             export PATH=/opt/local/bin:$PATH
-            sudo port select --set clang mp-clang-12
+            sudo port select --set clang mp-clang-13
             cmake -DCPACK_BINARY_DRAGNDROP=ON -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DUSE_OMP=ON ..
             make -j2
             make installer -j2
@@ -614,12 +614,12 @@ workflows:
   version: 2
   build:
     jobs:
-      - clang-tidy
-      - build_ubuntu18
-      - build_centos7
+      #- clang-tidy
+      #- build_ubuntu18
+      #- build_centos7
       #- test_clang_format
       #- build_win10_installer
-      #- build_osx_installer
+      - build_osx_installer
       #- build_ubuntu18_installer
       #- build_centos7_installer
       #- release_weekly_installers:
