--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,6 +147,108 @@ jobs:
           paths:
             - installers
 
+  conda_osx:
+    macos:
+      xcode: "13.4.1"
+
+    resource_class: large
+
+    steps:
+      - run:
+          name: Make VAPOR-Deps
+          command: |
+            sudo mkdir -p /usr/local/VAPOR-Deps
+            sudo chmod -R 777 /usr/local/VAPOR-Deps
+            sudo chown -R `whoami` /usr/local/VAPOR-Deps
+
+      #- restore_cache:
+      #    keys:
+      #      - clang12jafiojeoa;ij;eaw
+
+      - checkout
+
+      - run:
+          name: Get third party libraries
+          command: |
+            pip3 install gdown
+            sudo mkdir -p /usr/local/VAPOR-Deps
+            sudo chmod 777 /usr/local/VAPOR-Deps
+            cd /usr/local/VAPOR-Deps
+            gdown https://drive.google.com/uc?id=1Q-IXlP_OgZSXsWKmT-smyrW9xnR-dUfg
+            cd /usr/local/VAPOR-Deps
+            tar xf 2019-Aug-Darwin.tar.xz -C /usr/local/VAPOR-Deps
+            chmod -R 777 /usr/local/VAPOR-Deps
+
+      - run:
+          name: Get cmake
+          command: |
+            brew install cmake
+
+      - run:
+          name: Get MacPorts
+          command: |
+            curl -k -O https://distfiles.macports.org/MacPorts/MacPorts-2.7.1.tar.bz2
+            tar xf MacPorts-2.7.1.tar.bz2
+            cd MacPorts-2.7.1/
+            ./configure
+            make -j2
+            sudo make install -j2
+
+      - run:
+          name: Get libomp
+          command: |
+            #sudo /opt/local/bin/port selfupdate
+            #(sudo yes || true) | sudo /opt/local/bin/port install libomp
+          no_output_timeout: 30m
+
+      - run:
+          name: Get clang13
+          command: |
+            sudo /opt/local/bin/port selfupdate
+            (sudo yes || true) | sudo /opt/local/bin/port install clang-13
+            sudo /opt/local/bin/port select --set clang mp-clang-13
+            /opt/local/bin/clang++ -v > clangVersion.txt
+          no_output_timeout: 30m
+
+      - run:
+          name: install python
+          command: |
+            brew install -y python3
+            brew install -y python3-pip
+            pip3 install --upgrade pip
+            pip3 install scikit-build command
+      - run:
+          name: install miniconda
+          command: |
+            brew install -y wget
+            wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh
+            bash ~/miniconda.sh -b -p ~/miniconda 
+
+      - run:
+          name: conda build .
+          command: |
+            sudo port select --set clang mp-clang-13
+            brew -y install doxygen
+            #rm -rf /root/project/build/*
+            #rm -f /root/project/site.local
+            #cd /root/project/build
+            cd /root/project/conda
+            export PYTHONPATH=/root/miniconda/lib/python3.9
+            /root/miniconda/bin/conda install -y conda-build
+            /root/miniconda/bin/conda config --add channels conda-forge
+            /root/miniconda/bin/conda build .
+            mv *.tar.bz2 /tmp/workspace/installers
+          no_output_timeout: 30m
+
+      - store_artifacts:
+          path: /tmp/workspace/installers
+
+      - persist_to_workspace:
+          root: *workspace_root
+          paths:
+            - installers
+
+
   build_ubuntu18_installer:
     docker:
       - image: sgpearse/vapor3-ubuntu18:latest
