--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,10 +161,6 @@ jobs:
             sudo chmod -R 777 /usr/local/VAPOR-Deps
             sudo chown -R `whoami` /usr/local/VAPOR-Deps
 
-      #- restore_cache:
-      #    keys:
-      #      - clang12jafiojeoa;ij;eaw
-
       - checkout
 
       - run:
@@ -216,6 +212,7 @@ jobs:
             brew install python3
             pip3 install --upgrade pip
             pip3 install scikit-build command
+
       - run:
           name: install miniconda
           command: |
@@ -233,7 +230,7 @@ jobs:
             #cd /root/project/build
             cd /Users/distiller/project/conda
             export PYTHONPATH=/root/miniconda/lib/python3.9
-            /Users/distiller/miniconda/bin/conda install -y conda-build
+            /Users/distiller/miniconda/bin/conda install -y conda-build anaconda
             /Users/distiller/miniconda/bin/conda config --add channels conda-forge
             /Users/distiller/miniconda/bin/conda build .
             mv *.tar.bz2 /tmp/workspace/installers
