--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -729,8 +729,8 @@ workflows:
       - build_ubuntu18
       - build_centos7
       - python_api_ubuntu
-      #- python_api_centos
-      #- python_api_osx
+      - python_api_centos
+      - python_api_osx
       #- test_clang_format
       #- build_win10_installer
       #- build_osx_installer
