--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -380,6 +380,7 @@ jobs:
             conda install -y conda-build
             conda config --add channels conda-forge
             conda build .
+            conda build .
             mkdir /usr/local/conda-bld/linux-64/tarBallDir
             mv /usr/local/conda-bld/linux-64/*.tar.bz2 /usr/local/conda-bld/linux-64/tarBallDir
  
@@ -723,11 +724,11 @@ workflows:
   build:
     jobs:
       #- clang-tidy
-      - build_ubuntu18
-      - build_centos7
+      #- build_ubuntu18
+      #- build_centos7
       - python_api_ubuntu
-      #- python_api_centos
-      #- python_api_osx
+      - python_api_centos
+      - python_api_osx
       #- test_clang_format
       #- build_win10_installer
       #- build_osx_installer
