--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -823,6 +823,78 @@ jobs:
                  exit 0
               fi
 
+  build_ubuntu20_installer:
+    docker:
+      - image: ubuntu:20.04
+
+    steps:
+      - checkout
+
+      - run:
+          name: acquire prerequisites
+          command: |
+            apt update
+            apt install -y curl
+            apt install -y xz-utils
+            apt install -y git
+            apt install -y g++
+            apt install -y freeglut3-dev
+            apt install -y libexpat1-dev
+            apt install -y libglib2.0-0
+            apt install -y libdbus-1-3
+            apt install -y valgrind
+            apt install -y clang-tidy
+            apt install -y lsb-release
+
+      - run:
+          name: update 3rd party libraries
+          command: |
+            mkdir -p /usr/local/VAPOR-Deps
+            apt update
+            apt install -y python3-pip
+            pip3 install --upgrade pip
+            pip3 install scikit-build command
+            pip3 install gdown
+            gdown https://drive.google.com/uc?id=15-wSWR2H8swbpO7GvPueeaQrD56oLhxq
+            filename="/root/project/2019-Aug-Ubuntu22.tar.xz"
+            tar -xf ${filename} -C /usr/local/VAPOR-Deps
+
+      - run:
+          name: update cmake
+          command: |
+            sudo apt remove --purge --auto-remove cmake
+            sudo apt install -y software-properties-common lsb-release && \
+            sudo apt clean all
+            wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | sudo tee /etc/apt/trusted.gpg.d/kitware.gpg >/dev/null
+            sudo apt-add-repository "deb https://apt.kitware.com/ubuntu/ $(lsb_release -cs) main"
+            sudo apt install kitware-archive-keyring
+            sudo rm /etc/apt/trusted.gpg.d/kitware.gpg
+            sudo apt update
+            sudo apt install cmake
+
+      - run:
+          name: make installer
+          command: |
+            mkdir -p /root/project/build
+            cd /root/project/build
+            git checkout main
+            git reset --hard origin/main
+            git pull
+            cmake -DCMAKE_BUILD_TYPE:String=Release cmake -DPYTHONVERSION=3.9 -DQTDIR=/usr/local/VAPOR-Deps/2019-Aug/Qt/5.15.2/gcc_64 -DDIST_INSTALLER:string=ON -DUSE_OMP=ON ..
+            make -j2
+            make installer -j2
+            for f in VAPOR3-*.sh ; do mv "$f" "${f/Linux/Ubuntu20}" ; done
+            mkdir -p /tmp/workspace/installers
+            mv *.sh /tmp/workspace/installers
+
+      - store_artifacts:
+          path: /tmp/workspace/installers
+
+      - persist_to_workspace:
+          root: *workspace_root
+          paths:
+            - installers
+
   build_ubuntu22_installer:
     docker:
       - image: ubuntu:22.04
@@ -1003,10 +1075,10 @@ workflows:
   build:
     jobs:
       #- clang-tidy
-      - build_ubuntu18
-      - build_centos7
-      - build_python_api_ubuntuDebug
-      - build_python_api_ubuntu
+      #- build_ubuntu18
+      #- build_centos7
+      #- build_python_api_ubuntuDebug
+      #- build_python_api_ubuntu
       #- build_python_api_centos
       #- build_python_api_osx
       #- test_clang_format
@@ -1014,6 +1086,7 @@ workflows:
       #- build_osx_installer
       #- build_M1_installer
       #- build_ubuntu18_installer
+      - build_ubuntu20_installer
       #- build_ubuntu22_installer
       #- build_centos7_installer
       #- release_weekly_installers:
