--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,9 @@ jobs:
             mkdir build
             cd build
             git checkout $CIRCLE_BRANCH
+            git checkout main
+            git reset --hard origin/main
+            git pull
             & 'C:\\Program Files\\CMake\\bin\\cmake.exe' -S C:\Users\circleci\project -B C:\Users\circleci\project\build -DDIST_INSTALLER:string=ON -DCMAKE_BUILD_TYPE:STRING=Release -DBUILD_OSP=OFF -G 'Visual Studio 16 2019' -A x64
             msbuild C:\Users\circleci\project\build\PACKAGE.vcxproj /p:Configuration=Release /p:Platform=x64
             mkdir -p C:\Users\circleci\project\tmp\workspace\installers
@@ -186,6 +189,9 @@ jobs:
             mkdir build
             cd build
             git checkout $CIRCLE_BRANCH
+            git checkout main
+            git reset --hard origin/main
+            git pull
             export PATH=/opt/local/bin:$PATH
             sudo port select --set clang mp-clang-13
             cmake -DCPACK_BINARY_DRAGNDROP=ON \
@@ -268,6 +274,9 @@ jobs:
             mkdir build
             cd build
             git checkout $CIRCLE_BRANCH
+            git checkout main
+            git reset --hard origin/main
+            git pull
             export PATH=/opt/local/bin:$PATH
             sudo port select --set clang mp-clang-13
             cmake -DBUILD_OSP=OFF \
@@ -329,6 +338,9 @@ jobs:
           command: |
             cd /root/project/build
             git checkout $CIRCLE_BRANCH
+            git checkout main
+            git reset --hard origin/main
+            git pull
             cmake -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DUSE_OMP=ON ..
             make -j2
             make installer -j2
@@ -365,6 +377,9 @@ jobs:
           command: |
             cd /root/project/build
             git checkout $CIRCLE_BRANCH
+            git checkout main
+            git reset --hard origin/main
+            git pull
             cmake3 -DCMAKE_BUILD_TYPE:String=Release -DDIST_INSTALLER:string=ON -DUSE_OMP=ON ..
             make -j2
             make installer -j2
@@ -528,6 +543,9 @@ jobs:
             conda config --add channels conda-forge
             conda install -y conda-build
             cd /root/project/conda
+            git checkout main
+            git reset --hard origin/main
+            git pull
             DEBUG_BUILD=false MAP_IMAGES_PATH="/root/VAPOR-Data/images" conda build .
             mkdir /usr/local/conda-bld/linux-64/tarBallDir
             mv /usr/local/conda-bld/linux-64/*.tar.bz2 /usr/local/conda-bld/linux-64/tarBallDir
