--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -833,6 +833,7 @@ jobs:
       - run:
           name: acquire prerequisites
           command: |
+            DEBIAN_FRONTEND=noninteractive
             apt update
             apt install -y curl
             apt install -y xz-utils
