--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1096,6 +1096,20 @@ jobs:
             #apt install -y lsb-release
 
       - run:
+          name: get source files
+          command: |
+            #https://drive.google.com/file/d/1FG8ngmz9Tk3HKZgGejqwtbkBAVonm91z/view?usp=share_link
+            mkdir -p /usr/local/VAPOR-Deps
+            apt update
+            apt install -y python3-pip
+            pip3 install --upgrade pip
+            pip3 install scikit-build command
+            pip3 install gdown
+            gdown https://drive.google.com/uc?id=1FG8ngmz9Tk3HKZgGejqwtbkBAVonm91z
+            filename="/root/project/2023-src.tar.xz"
+            tar -xf ${filename} -C /usr/local/VAPOR-Deps
+
+      - run:
           name: update cmake
           command: |
             sudo apt-add-repository 'deb https://apt.kitware.com/ubuntu/ focal main'     
