--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1098,9 +1098,8 @@ jobs:
       - run:
           name: update cmake
           command: |
-            DEBIAN_FRONTEND=noninteractive
             apt update
-            apt install -y software-properties-common
+            DEBIAN_FRONTEND=noninteractive apt install -y software-properties-common
             apt-add-repository 'deb https://apt.kitware.com/ubuntu/ focal main'     
             apt install -y cmake --allow-unauthenticated
 
