--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1100,7 +1100,7 @@ jobs:
           command: |
             # https://apt.kitware.com/
             apt-get update
-            apt-get install gpg wget
+            apt-get install -y gpg wget
             wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | sudo tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null
             echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ focal main' | sudo tee /etc/apt/sources.list.d/kitware.list >/dev/null
             DEBIAN_FRONTEND=noninteractive apt install -y software-properties-common
