--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1131,9 +1131,8 @@ jobs:
           name: compress files
           command: |
             tar cfJ /usr/local/VAPOR-Deps/2023-Ubuntu20.tar.xz /usr/local/VAPOR-Deps/current
-
-      - store_artifacts:
-          path: /usr/local/VAPOR-Deps
+            #- store_artifacts:
+            #    path: /usr/local/VAPOR-Deps
 
       - persist_to_workspace:
           root: *workspace_root
