--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1150,6 +1150,123 @@ jobs:
       - store_artifacts:
           path: /usr/local/VAPOR-Deps/2023-CentOS7.tar.xz
 
+  build_osx_libs:
+    macos:
+      xcode: "13.4.1"
+
+    steps:
+      - checkout
+
+      - run:
+          name: get source files
+          command: |
+            #https://drive.google.com/file/d/1FG8ngmz9Tk3HKZgGejqwtbkBAVonm91z/view?usp=share_link
+            mkdir -p /usr/local/VAPOR-Deps
+            pip3 install gdown
+            gdown https://drive.google.com/uc?id=1FG8ngmz9Tk3HKZgGejqwtbkBAVonm91z
+            filename="/root/project/2023-src.tar.xz"
+            tar xf $filename -C /usr/local/VAPOR-Deps
+            #chmod -R 777 /usr/local/VAPOR-Deps
+
+      - run:
+          name: build libraries
+          command: |
+            chmod 777 /root/project/scripts/build3rdParty.sh
+            /root/project/scripts/build3rdParty.sh -o OSX
+
+      - run:
+          name: compress files
+          command: |
+            tar cfJ /usr/local/VAPOR-Deps/2023-OSX.tar.xz /usr/local/VAPOR-Deps/current
+
+      - store_artifacts:
+          path: /usr/local/VAPOR-Deps/2023-OSX.tar.xz
+
+
+  build_osx_installer:
+    macos:
+      xcode: "13.4.1"
+    steps:
+      #- restore_cache:
+      #    keys:
+      #      - osx-{{ .Environment.CIRCLE_SHA1 }}
+      - run:
+          name: Make VAPOR-Deps
+          command: |
+            sudo mkdir -p /usr/local/VAPOR-Deps
+            sudo chmod -R 777 /usr/local/VAPOR-Deps
+            sudo chown -R `whoami` /usr/local/VAPOR-Deps
+
+      - checkout
+
+      - run:
+          name: Get third party libraries
+          command: |
+            pip3 install gdown
+            sudo mkdir -p /usr/local/VAPOR-Deps
+            sudo chmod 777 /usr/local/VAPOR-Deps
+            cd /usr/local/VAPOR-Deps
+            gdown https://drive.google.com/uc?id=1Q-IXlP_OgZSXsWKmT-smyrW9xnR-dUfg
+            cd /usr/local/VAPOR-Deps
+            tar xf 2019-Aug-Darwin.tar.xz -C /usr/local/VAPOR-Deps
+            chmod -R 777 /usr/local/VAPOR-Deps
+
+      - run:
+          name: Get cmake
+          command: |
+            brew install cmake
+
+      - run:
+          name: Get MacPorts
+          command: |
+            curl -k -O https://distfiles.macports.org/MacPorts/MacPorts-2.7.1.tar.bz2
+            tar xf MacPorts-2.7.1.tar.bz2
+            cd MacPorts-2.7.1/
+            ./configure
+            make -j2
+            sudo make install -j2
+
+      - run:
+          name: Get libomp
+          command: |
+            #sudo /opt/local/bin/port selfupdate
+            #(sudo yes || true) | sudo /opt/local/bin/port install libomp
+          no_output_timeout: 30m
+
+      - run:
+          name: Get clang13
+          command: |
+            sudo /opt/local/bin/port selfupdate
+            (sudo yes || true) | sudo /opt/local/bin/port install clang-13
+            sudo /opt/local/bin/port select --set clang mp-clang-13
+            /opt/local/bin/clang++ -v > clangVersion.txt
+          no_output_timeout: 30m
+
+      - run:
+          name: make VAPOR
+          command: |
+            cp site_files/site.NCAR site.local
+            mkdir build
+            cd build
+            git checkout $CIRCLE_BRANCH
+            export PATH=/opt/local/bin:$PATH
+            sudo port select --set clang mp-clang-13
+            cmake -DCPACK_BINARY_DRAGNDROP=ON \
+                  -DCMAKE_BUILD_TYPE:String=Release \
+                  -DDIST_INSTALLER:string=ON \
+                  -DCMAKE_CXX_COMPILER=clang++ \
+                  -DCMAKE_C_COMPILER=clang \
+                  -DUSE_OMP=ON \
+                  ..
+            make -j2
+            make installer -j2
+            mkdir -p /tmp/workspace/installers
+            mv *.dmg /tmp/workspace/installers
+          no_output_timeout: 30m
+
+
+
+
 workflows:
   version: 2
   build:
@@ -1224,8 +1341,8 @@ workflows:
       #- build_ubuntu22_installer
       #- build_centos7_installer
       - build_ubuntu20_libs
-      #- build_centos7_libs
-      #- build_osx_libs
+      - build_centos7_libs
+      - build_osx_libs
       #- release_weekly_installers:
       #    requires:
       #      - build_ubuntu18_installer
