--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1151,8 +1151,8 @@ jobs:
             pip3 install gdown
             gdown https://drive.google.com/uc?id=1FG8ngmz9Tk3HKZgGejqwtbkBAVonm91z
             filename="/root/project/2023-src.tar.xz"
-            tar xf $filename -C /usr/local/VAPOR-Deps
-            #chmod -R 777 /usr/local/VAPOR-Deps
+            sudo tar xf $filename -C /usr/local/VAPOR-Deps
+            sudo chmod -R 777 /usr/local/VAPOR-Deps
 
       - run:
           name: build libraries
@@ -1185,7 +1185,7 @@ jobs:
             pip3 install gdown
             gdown https://drive.google.com/uc?id=1FG8ngmz9Tk3HKZgGejqwtbkBAVonm91z
             filename="/root/project/2023-src.tar.xz"
-            bsdtar -xf ${filename} -C /usr/local/VAPOR-Deps
+            tar xvf ${filename} -C /usr/local/VAPOR-Deps
 
       - run:
           name: build libraries
