--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1220,9 +1220,9 @@ workflows:
       #- build_ubuntu20_installer
       #- build_ubuntu22_installer
       #- build_centos7_installer
-      - build_ubuntu20_libs
+      #- build_ubuntu20_libs
       - build_centos7_libs
-      - build_osx_libs
+      #- build_osx_libs
       #- release_weekly_installers:
       #    requires:
       #      - build_ubuntu18_installer
