--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1122,7 +1122,7 @@ jobs:
             tar -xf ${filename} -C /usr/local/VAPOR-Deps
 
       - run:
-          name: make installer
+          name: build libraries
           command: |
             chmod 777 /root/project/scripts/build3rdParty.sh
             /root/project/scripts/build3rdParty.sh -o Ubuntu
@@ -1239,9 +1239,9 @@ workflows:
       #- build_ubuntu20_installer
       #- build_ubuntu22_installer
       #- build_centos7_installer
-      #- build_ubuntu20_libs
+      - build_ubuntu20_libs
       - build_centos7_libs
-      #- build_osx_libs
+      - build_osx_libs
       #- release_weekly_installers:
       #    requires:
       #      - build_ubuntu18_installer
