--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1241,6 +1241,7 @@ workflows:
       - build_ubuntu20_libs
       - build_centos7_libs
       - build_osx_libs
+      #- build_windows_libs
       #- release_weekly_installers:
       #    requires:
       #      - build_ubuntu18_installer
