--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1133,7 +1133,7 @@ jobs:
             tar cfJ /usr/local/VAPOR-Deps/2023-Ubuntu20.tar.xz /usr/local/VAPOR-Deps/current
 
       - store_artifacts:
-          path: /usr/local/VAPOR-Deps
+          path: /usr/local/VAPOR-Deps/2023-Ubuntu20.tar.xz
 
   build_osx_libs:
     macos:
